--- a/index.html
+++ b/index.html
@@ -86,78 +86,76 @@
 
   <!-- start main -->
   <main>
-    <div class="container">
-      <div class="main-div">
-        <h1 class="main-text fixall">روائع القطع لبيع قطع غيار سيارات نيسان</h1>
-        <div class="select-form-cont">
-          <div class="select-form">
-            <div class="select-cont">
-              <span class="select-label">نوع السيارة</span>
-              <select class="selectpicker search-select">
-                <option hidden>اختر النوع</option>
-                <option>نوع 1</option>
-                <option>نوع 2</option>
-                <option>نوع 3</option>
-              </select>
-            </div>
-            <div class="select-cont">
-              <span class="select-label">الموديل</span>
-              <select class="selectpicker search-select">
-                <option hidden>اختر النوع</option>
-                <option>نوع 1</option>
-                <option>نوع 2</option>
-                <option>نوع 3</option>
-                <option>نوع 4</option>
-              </select>
-            </div>
-            <div class="select-cont">
-              <span class="select-label">سنة الصنع</span>
-              <select class="selectpicker search-select">
-                <option hidden>سنة الصنع</option>
-                <option>2020</option>
-                <option>2019</option>
-                <option>2018</option>
-                <option>2017</option>
-                <option>2016</option>
-                <option>2015</option>
-                <option>2014</option>
-                <option>2013</option>
-                <option>2012</option>
-                <option>2011</option>
-                <option>2010</option>
-                <option>2009</option>
-                <option>2009</option>
-                <option>2007</option>
-                <option>2006</option>
-                <option>2005</option>
-                <option>2004</option>
-                <option>2003</option>
-                <option>2002</option>
-                <option>2001</option>
-                <option>2000</option>
-              </select>
-            </div>
-            <div class="select-cont">
-              <span class="select-label">رقم الشاسيه</span>
-              <select class="selectpicker search-select">
-                <option hidden>اختر النوع</option>
-                <option>نوع 1</option>
-                <option>نوع 2</option>
-              </select>
-            </div>
-            <div class="select-cont">
-              <span class="select-label">رقم القطعة</span>
-              <select class="selectpicker search-select">
-                <option hidden>اختر النوع</option>
-                <option>نوع 1</option>
-                <option>نوع 2</option>
-                <option>نوع 3</option>
-                <option>نوع 4</option>
-                <option>نوع 5</option>
-              </select>
-            </div>
-            <button class="fixall search-button"><span class="fa fa-search"></span>بحث</button>
+    <div class="main-div container">
+      <h1 class="main-text fixall">روائع القطع لبيع قطع غيار سيارات نيسان</h1>
+      <div class="select-form-cont">
+        <div class="select-form">
+          <div class="select-cont">
+            <span class="select-label">نوع السيارة</span>
+            <select class="selectpicker search-select">
+              <option hidden>اختر النوع</option>
+              <option>نوع 1</option>
+              <option>نوع 2</option>
+              <option>نوع 3</option>
+            </select>
           </div>
+          <div class="select-cont">
+            <span class="select-label">الموديل</span>
+            <select class="selectpicker search-select">
+              <option hidden>اختر النوع</option>
+              <option>نوع 1</option>
+              <option>نوع 2</option>
+              <option>نوع 3</option>
+              <option>نوع 4</option>
+            </select>
+          </div>
+          <div class="select-cont">
+            <span class="select-label">سنة الصنع</span>
+            <select class="selectpicker search-select">
+              <option hidden>سنة الصنع</option>
+              <option>2020</option>
+              <option>2019</option>
+              <option>2018</option>
+              <option>2017</option>
+              <option>2016</option>
+              <option>2015</option>
+              <option>2014</option>
+              <option>2013</option>
+              <option>2012</option>
+              <option>2011</option>
+              <option>2010</option>
+              <option>2009</option>
+              <option>2009</option>
+              <option>2007</option>
+              <option>2006</option>
+              <option>2005</option>
+              <option>2004</option>
+              <option>2003</option>
+              <option>2002</option>
+              <option>2001</option>
+              <option>2000</option>
+            </select>
+          </div>
+          <div class="select-cont">
+            <span class="select-label">رقم الشاسيه</span>
+            <select class="selectpicker search-select">
+              <option hidden>اختر النوع</option>
+              <option>نوع 1</option>
+              <option>نوع 2</option>
+            </select>
+          </div>
+          <div class="select-cont">
+            <span class="select-label">رقم القطعة</span>
+            <select class="selectpicker search-select">
+              <option hidden>اختر النوع</option>
+              <option>نوع 1</option>
+              <option>نوع 2</option>
+              <option>نوع 3</option>
+              <option>نوع 4</option>
+              <option>نوع 5</option>
+            </select>
+          </div>
+          <button class="fixall search-button"><span class="fa fa-search"></span>بحث</button>
         </div>
       </div>
     </div>
