--- a/index-en.html
+++ b/index-en.html
@@ -86,78 +86,76 @@
 
     <!-- start main -->
     <main>
-        <div class="container">
-            <div class="main-div">
-                <h1 class="main-text fixall">Parts Wonder to sell Nissan auto parts</h1>
-                <div class="select-form-cont">
-                    <div class="select-form">
-                        <div class="select-cont">
-                            <span class="select-label">Car Type</span>
-                            <select class="selectpicker search-select">
-                                <option hidden>Choose Car</option>
-                                <option>car 1</option>
-                                <option>car 2</option>
-                                <option>car 3</option>
-                            </select>
-                        </div>
-                        <div class="select-cont">
-                            <span class="select-label">Model</span>
-                            <select class="selectpicker search-select">
-                                <option hidden>Choose Model</option>
-                                <option>model 1</option>
-                                <option>model 2</option>
-                                <option>model 3</option>
-                                <option>model 4</option>
-                            </select>
-                        </div>
-                        <div class="select-cont">
-                            <span class="select-label">Manufacturing year</span>
-                            <select class="selectpicker search-select">
-                                <option hidden>Manufacturing year</option>
-                                <option>2020</option>
-                                <option>2019</option>
-                                <option>2018</option>
-                                <option>2017</option>
-                                <option>2016</option>
-                                <option>2015</option>
-                                <option>2014</option>
-                                <option>2013</option>
-                                <option>2012</option>
-                                <option>2011</option>
-                                <option>2010</option>
-                                <option>2009</option>
-                                <option>2009</option>
-                                <option>2007</option>
-                                <option>2006</option>
-                                <option>2005</option>
-                                <option>2004</option>
-                                <option>2003</option>
-                                <option>2002</option>
-                                <option>2001</option>
-                                <option>2000</option>
-                            </select>
-                        </div>
-                        <div class="select-cont">
-                            <span class="select-label">Chassis No.</span>
-                            <select class="selectpicker search-select">
-                                <option hidden>Chassis No.</option>
-                                <option>Chassis 1</option>
-                                <option>Chassis 2</option>
-                            </select>
-                        </div>
-                        <div class="select-cont">
-                            <span class="select-label">Piece No.</span>
-                            <select class="selectpicker search-select">
-                                <option hidden>Choose Piece</option>
-                                <option>Piece 1</option>
-                                <option>Piece 2</option>
-                                <option>Piece 3</option>
-                                <option>Piece 4</option>
-                                <option>Piece 5</option>
-                            </select>
-                        </div>
-                        <button class="fixall search-button"><span class="fa fa-search"></span>Search</button>
+        <div class="main-div container">
+            <h1 class="main-text fixall">Parts Wonder to sell Nissan auto parts</h1>
+            <div class="select-form-cont">
+                <div class="select-form">
+                    <div class="select-cont">
+                        <span class="select-label">Car Type</span>
+                        <select class="selectpicker search-select">
+                            <option hidden>Choose Car</option>
+                            <option>car 1</option>
+                            <option>car 2</option>
+                            <option>car 3</option>
+                        </select>
                     </div>
+                    <div class="select-cont">
+                        <span class="select-label">Model</span>
+                        <select class="selectpicker search-select">
+                            <option hidden>Choose Model</option>
+                            <option>model 1</option>
+                            <option>model 2</option>
+                            <option>model 3</option>
+                            <option>model 4</option>
+                        </select>
+                    </div>
+                    <div class="select-cont">
+                        <span class="select-label">Manufacturing year</span>
+                        <select class="selectpicker search-select">
+                            <option hidden>Manufacturing year</option>
+                            <option>2020</option>
+                            <option>2019</option>
+                            <option>2018</option>
+                            <option>2017</option>
+                            <option>2016</option>
+                            <option>2015</option>
+                            <option>2014</option>
+                            <option>2013</option>
+                            <option>2012</option>
+                            <option>2011</option>
+                            <option>2010</option>
+                            <option>2009</option>
+                            <option>2009</option>
+                            <option>2007</option>
+                            <option>2006</option>
+                            <option>2005</option>
+                            <option>2004</option>
+                            <option>2003</option>
+                            <option>2002</option>
+                            <option>2001</option>
+                            <option>2000</option>
+                        </select>
+                    </div>
+                    <div class="select-cont">
+                        <span class="select-label">Chassis No.</span>
+                        <select class="selectpicker search-select">
+                            <option hidden>Chassis No.</option>
+                            <option>Chassis 1</option>
+                            <option>Chassis 2</option>
+                        </select>
+                    </div>
+                    <div class="select-cont">
+                        <span class="select-label">Piece No.</span>
+                        <select class="selectpicker search-select">
+                            <option hidden>Choose Piece</option>
+                            <option>Piece 1</option>
+                            <option>Piece 2</option>
+                            <option>Piece 3</option>
+                            <option>Piece 4</option>
+                            <option>Piece 5</option>
+                        </select>
+                    </div>
+                    <button class="fixall search-button"><span class="fa fa-search"></span>Search</button>
                 </div>
             </div>
         </div>
