--- a/index-en.html
+++ b/index-en.html
@@ -86,6 +86,8 @@
 
     <!-- start main -->
     <main>
+        <img src="images/main.jpg" class="img-responsive">
+
         <div class="main-div container">
             <h1 class="main-text fixall">Parts Wonder to sell Nissan auto parts</h1>
             <div class="select-form-cont">
