--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
   <!-- start main -->
   <main>
+    <img src="images/main.jpg" class="img-responsive">
     <div class="main-div container">
       <h1 class="main-text fixall">روائع القطع لبيع قطع غيار سيارات نيسان</h1>
       <div class="select-form-cont">
